--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,30 @@
 body{
     background-color: #d8d9de;
 }
+/* Media para escritorio */
+@media only screen and (min-width: 768px){
+
+}
+/* Media para telefonos */
+@media only screen and (max-width: 1024px){
+
+}
+.div-Logo{
+    position: relative;
+    margin: 30vw 19vw;
+}
+.css-input {
+     padding: 5px;
+     font-size: 16px;
+     border-width: 1px;
+     border-color: #ffffff;
+     background-color: #FFFFFF;
+     color: #000000;
+     border-style: hidden;
+     border-radius: 47px;
+     box-shadow: 0px 0px 3px rgba(66,66,66,.75);
+     text-shadow: 0px 0px 0px rgba(66,66,66,.0);
+}
+ .css-input:focus {
+     outline:none;
+}
