--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body{
     margin: 30vw 19vw;
 }
 .css-input {
+    position: relative;
+    margin: 12vw 1vw;
+    width: 47vw;
      padding: 5px;
      font-size: 16px;
      border-width: 1px;
