--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,13 @@ body{
 .div-Logo{
     position: relative;
 }
-.conekta-logo{
+.conekta-logo {
     width: 50vw;
     position: fixed;
 }
 .css-input {
     margin-top: 12vw;
-    width: 48vw;
+    width: 49.5vw;
     padding: 5px;
     font-size: 16px;
     border-width: 1px;
@@ -27,8 +27,8 @@ body{
     color: #000000;
     border-style: hidden;
     border-radius: 47px;
-    box-shadow: 0px 0px 3px rgba(66,66,66,.75);
-    text-shadow: 0px 0px 0px rgba(66,66,66,.0);
+    box-shadow: 0px 0px 3px rgb(66 66 66 / 75%);
+    text-shadow: 0px 0px 0px rgb(66 66 66 / 0%);
 }
  .css-input:focus {
      outline:none;
