--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,15 @@ body{
 }
 /* Media para escritorio */
 @media only screen and (min-width: 768px){
-
+    .css-input {
+        padding: 20px;
+    }    
 }
 /* Media para telefonos */
 @media only screen and (max-width: 1024px){
-
+    .css-input {
+        padding: -2px;
+    }
 }
 .div-Logo{
     position: relative;
@@ -21,7 +25,6 @@ body{
 .css-input {
     margin-top: 1vw;
     width: 49.5vw;
-    padding: 20px;
     font-size: 16px;
     border-width: 1px;
     border-color: #ffffff;
