--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,40 @@
-body{
-    background-color: #d8d9de;
-    text-align: center;
+body {
+  background-color: #d8d9de;
+  text-align: center;
 }
 /* Media para escritorio */
-@media only screen and (min-width: 768px){
-    .css-input {
-        padding: 20px;
-    }    
+@media only screen and (min-width: 768px) {
+  .css-input {
+    padding: 20px;
+  }
 }
 /* Media para telefonos */
-@media only screen and (max-width: 1024px){
-    .css-input {
-        padding: -2px;
-    }
+@media only screen and (max-width: 1024px) {
+  .css-input {
+    padding: -2px;
+  }
 }
-.div-Logo{
-    position: relative;
-    margin: 30vw 17vw;
+.div-Logo {
+  position: relative;
+  margin: 30vw 17vw;
 }
 .conekta-logo {
-    width: 50vw;
-    position: relative;
+  width: 50vw;
+  position: relative;
 }
 .css-input {
-    margin-top: 1vw;
-    width: 49.5vw;
-    font-size: 16px;
-    border-width: 1px;
-    border-color: #ffffff;
-    background-color: #FFFFFF;
-    color: #000000;
-    border-style: hidden;
-    border-radius: 47px;
-    box-shadow: 0px 0px 3px rgb(66 66 66 / 75%);
-    text-shadow: 0px 0px 0px rgb(66 66 66 / 0%);
+  margin-top: 1vw;
+  width: 49.5vw;
+  font-size: 16px;
+  border-width: 1px;
+  border-color: #ffffff;
+  background-color: #ffffff;
+  color: #000000;
+  border-style: hidden;
+  border-radius: 47px;
+  box-shadow: 0px 0px 3px rgb(66 66 66 / 75%);
+  text-shadow: 0px 0px 0px rgb(66 66 66 / 0%);
 }
- .css-input:focus {
-     outline:none;
+.css-input:focus {
+  outline: none;
 }
