--- a/css/style.css
+++ b/css/style.css
@@ -10,17 +10,17 @@ body{
 @media only screen and (max-width: 1024px){
 
 }
-.div-Logo{
+.div-Logo{ 
     position: relative;
+    display: inline-block;
 }
 .conekta-logo {
     width: 50vw;
 }
 .css-input {
-    margin-top: 12vw;
-    width: 49.5vw;
+    margin: 5vw 1vw;
+    width: auto;
     padding: 5px;
-    font-size: 16px;
     border-width: 1px;
     border-color: #ffffff;
     background-color: #FFFFFF;
@@ -29,7 +29,26 @@ body{
     border-radius: 47px;
     box-shadow: 0px 0px 3px rgb(66 66 66 / 75%);
     text-shadow: 0px 0px 0px rgb(66 66 66 / 0%);
+    display: inline-block;
+    align-content: center;
+
 }
  .css-input:focus {
      outline:none;
+}
+.fa-search{
+    font-weight: 900;
+    font-size: 1.5rem;
+    margin: 0.5rem;
+    vertical-align: middle;
+  }
+.search-input{
+    margin: 1vw;
+    width: 49.5vw;
+    font-size: 16px;
+    border-width: 1px;
+    border-color: #ffffff;
+    background-color: #ffffff;
+    color: #000000;
+    border-style: hidden;
 }
